--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,16 @@
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
     "brace": "0.11.1",
+    "create-react-class": "15.6.3",
+    "immutability-helper": "3.0.1",
     "react": "^16.13.0",
     "react-ace": "8.0.0",
     "react-ace-builds": "7.3.1",
     "react-bootstrap": "1.0.0-beta.17",
+    "react-dnd": "10.0.2",
+    "react-dnd-html5-backend": "10.0.2",
     "react-dom": "^16.13.0",
+    "react-dom-factories": "1.0.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
