--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,11 +11,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-cache-controller": "1.1.0",
+    "global": "4.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "~1.9.1",
-    "nodemon": "2.0.2",
+    "nodemon": "2.0.3",
     "promise-mysql": "4.1.3",
     "rand-token": "1.0.1"
   }
