--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "8.5.1",
     "morgan": "~1.9.1",
     "nodemon": "2.0.3",
+    "pbkdf2": "3.0.17",
     "promise-mysql": "4.1.3",
     "rand-token": "1.0.1"
   }
