--- a/front-end/package.json
+++ b/front-end/package.json
@@ -51,10 +51,6 @@
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/preset-env": "7.9.5",
     "@babel/preset-react": "7.9.4",
-    "babel-loader": "8.1.0",
-    "html-webpack-plugin": "4.2.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
+    "html-webpack-plugin": "4.2.0"
   }
 }
