--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.0",
     "react-dom-factories": "1.0.2",
     "react-konva": "16.12.0-0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.0",
     "use-image": "1.0.5"
   },
