--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "react-konva": "16.12.0-0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.0",
+    "styled-components": "5.1.0",
     "use-image": "1.0.5"
   },
   "scripts": {
