--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "^16.13.0",
     "react-dom-factories": "1.0.2",
+    "react-icons": "^3.10.0",
     "react-konva": "16.12.0-0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.0",
