--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:14.4.0-alpine
+FROM node:14.4.0-alpine as builder
 
 WORKDIR /app
 
 ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json /app/package.json
-RUN npm install
+RUN npm install --silent
+RUN npm install react-scripts@2.1.3 -g --silent
 
 COPY . .
 
