--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,8 +7,9 @@ upstream server {
 
 server {
   listen 80;
+  server_name localhost;
 
-  location / {        
+  location / {
     proxy_pass http://client;
   }
 
