--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,25 +25,8 @@ services:
       - backend
     # depends_on:
     #   - mysql
-    ports:
-      - "4000:4000"
-  nginx:
-    restart: always
-    build:
-      dockerfile: Dockerfile
-      context: ./nginx
-    ports:
-      - "80:80"
-    networks:
-      - backend
-  python:
-    build:
-      dockerfile: Dockerfile
-      context: ./python
-    volumes:
-      - ./python/:/app
-    networks:
-      - backend
+    # ports:
+    #   - "4000:4000"
   # mysql:
   #   container_name: mysql
   #   image: mysql
@@ -53,9 +36,16 @@ services:
   #     - "3306:3306"
   #   networks:
   #     - backend
-  #   restart: always
-  #   enviroment:
-  #
+
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports:
+      - "80:80"
+    networks:
+      - backend
 
 networks:
   backend:
