--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream server {
 
 server {
   listen 80;
-  server_name localhost;
+  server_name smilelab.ga;
 
   location / {
     proxy_pass http://client;
