--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\rdd92\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+  "python.pythonPath": "/bin/python3"
 }
