--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react": "^16.13.0",
     "react-ace": "8.0.0",
     "react-ace-builds": "7.3.1",
-    "react-bootstrap": "1.0.0-beta.17",
+    "react-bootstrap": "^1.4.0",
     "react-dnd": "10.0.2",
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "^16.13.0",
