--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "4.4.1",
     "brace": "0.11.1",
     "create-react-class": "15.6.3",
+    "immer": "^8.0.0",
     "immutability-helper": "3.0.1",
     "konva": "4.2.0",
     "react": "^16.13.0",
