Etc: 판다스, 넘파이 모듈 추가

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,6 +7,8 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY ./package.json ./
 
 RUN npm install -g nodemon \ && npm install
+RUN pip install numpy
+RUN pip install pandas
 
 COPY . .
 
