Env: production환경에서 nodemon이 아니라 node로 실행

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,10 +6,10 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY ./package.json ./
 
-RUN npm install -g nodemon \ && npm install
+RUN npm install
 RUN pip install numpy
 RUN pip install pandas
 
 COPY . .
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
