Fix: 새로 구매한 도메인 적용

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream server {
 
 server {
   listen 80;
-  server_name smilelab.ga;
+  server_name smilelab.site;
 
   location / {
     proxy_pass http://client;
