Refactor: 다른 url도 받을 수 있도록 변경

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream server {
 
 server {
   listen 80;
-  server_name smilelab.site;
+  server_name smilelab.site www.smilelab.site api.smilelab.site www.api.smilelab.site;
 
   location / {
     proxy_pass http://client;
